--- a/website/output/theme/css/main.css
+++ b/website/output/theme/css/main.css
@@ -9,7 +9,7 @@
 
 /* Imports */
 @import url("reset.css");
-@import url("pygment.css");
+@import url("github.css");
 @import url("typogrify.css");
 @import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz&subset=latin);
 
