Added e2e networks to footer

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -73,7 +73,7 @@
                 <address id="about" class="vcard body">
                     Powered by <a href="http://alexis.notmyidea.org/pelican/">pelican</a>. Theme by <a href="http://coding.smashingmagazine.com/2009/08/04/designing-a-html-5-layout-from-scratch/">Smashing Magazine</a>.
 
-                    <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">License <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/">CC BY-NC-ND</a>.
+                    <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">License <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/">CC BY-NC-ND</a>.Hosted by <a href="http://e2enetworks.com/"> E2E Networks </a>.
              </address><!-- /#about -->
 
 
