--- a/_assets/css/bangpypers.css
+++ b/_assets/css/bangpypers.css
@@ -3,3 +3,18 @@
     margin: -20px 0px 20px 0px;
     font-style: italic;
 }
+
+.menu {
+    background: #5198DF;
+    padding: 5px 20px;
+    border-bottom: 3px solid rgba(255,255,255, 0.5);
+    border-top: 3px solid rgba(255,255,255,0.5);
+}
+.menu a {
+    color: white;
+    font-weight: bold;
+    padding: 0px 10px;
+}
+.menu a:hover {
+    text-decoration: underline;
+}
