--- a/_assets/css/bangpypers.css
+++ b/_assets/css/bangpypers.css
@@ -18,3 +18,46 @@
 .menu a:hover {
     text-decoration: underline;
 }
+
+ul.social {
+    float: right;
+    /*
+    width: 100%;
+    margin-top: 18px;
+    */
+}
+
+ul.social li {
+    float: left;
+    margin-right: 5px;
+    width: 27px;
+    height: 27px;
+    display: block;
+}
+
+ul.social li a {
+    -webkit-transition: opacity 120ms ease-in-out;
+    -moz-transition: opacity 120ms ease-in-out;
+    -o-transition: opacity 120ms ease-in-out;
+    transition: opacity 120ms ease-in-out;
+    float: left;
+    width: 27px;
+    height: 27px;
+    display: block;
+    -moz-opacity: 0.6;
+    opacity: 0.6;
+    filter: alpha(opacity = 0.6);
+}
+
+ul.social li a:hover {
+    opacity: 1;
+    -moz-opacity: 1;
+}
+
+ul.social li.facebook a {
+    background: url(../images/social_icons/facebook.png) no-repeat;
+}
+
+ul.social li.twitter a {
+    background: url(../images/social_icons/twitter.png) no-repeat;
+}
