--- a/_assets/modernist/stylesheets/styles.css
+++ b/_assets/modernist/stylesheets/styles.css
@@ -100,6 +100,8 @@ header p.view a {
 header p.view small {
   font-weight: 400;
 }
+
+/*
 header ul {
   margin: 0;
   padding: 0;
@@ -176,6 +178,7 @@ header ul a strong {
   color: #fff;
   -webkit-font-smoothing: antialiased;
 }
+*/
 
 section {
   padding: 15px 20px;
