Move legacy poets to new format
Moved all the past posts to new format

updated footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -245,7 +245,7 @@
                                                             Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
                                                         </div>
                                                         <div class="col-md-6 col-sm-6 text-center text-lg-right">    
-                                                            <a target="_blank" rel="noopener noreferrer" href="https://github.com/wowthemesnet/mediumish-theme-jekyll">Mediumish Theme</a> modified by <a target="_blank" rel="noopener noreferrer" href="https://zeospec.com/">ZeoSpec</a>
+                                                            <a target="_blank" rel="noopener noreferrer" href="https://github.com/wowthemesnet/mediumish-theme-jekyll">Mediumish Theme</a> rewritten by <a target="_blank" rel="noopener noreferrer" href="https://zeospec.com/">ZeoSpec</a>
                                                         </div>
                                                     </div>
                                                 </div>
