--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -256,7 +256,7 @@
                                                 
                                             </div> <!-- /.site-content>
                                                 
-                                                <!-- Bootstrap core JavaScript
+                                                Bootstrap core JavaScript
                                                     ================================================== -->
                                                     <!-- Placed at the end of the document so the pages load faster -->
                                                     
