--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -117,8 +117,7 @@ post_class: post-template
             
         </div>
     </div>
-    <!-- End Article
-        ================================================== -->
+    <!-- End Article ================================================== -->
         
         
         
