--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -88,9 +88,13 @@ License: https://www.wowthemes.net/freebies-license/
      transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
  .listfeaturedtag .wrapthumbnail {
-     min-height:290px;
+     /* min-height:290px;
      flex:0 0 auto;
-     height: 100%;
+     height: 100%; */ 
+     
+     /* Error lesson */
+
+    height: 290px;
 }
  .maxthumb {
      max-height:300px;
