--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,7 +66,7 @@ post_class: post-template
                         {% assign sortedCategories = page.categories | sort %}
                         {% for category in sortedCategories %}
                         <li>
-                            <a href="{{ site.baseurl }}/{{ category | slugify }}/">{{ category }}</a>
+                            <a href="{{ site.baseurl }}/archives/{{ category | slugify }}/">{{ category }}</a>
                         </li>
                         {% endfor %}
                     </ul>
