--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         <meta property="og:region" content="Karnataka"/>
         <meta property="og:country-name" content="INDIA"/>
         <meta property="og:site_name" content="{% if page.type == "year" %}{{ page.date | date: "%Y"}}{% elsif page.type == "month" %}{{ page.date | date: "%B %Y"}}{% elsif page.type == "day" %}{{ page.date | date: "%d %B %Y"}}{% elsif page.type == "tag" %}{% assign author = site.authors[page.title] %}{{ author.display_name }}{% else %}{{ page.title }}{% endif %} | {{site.name}}"/>
-        <meta property="og:image" content="{% if page.image %}{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | prepend: site.baseurl | prepend: site.url }}{% endif %}{% elsif page.type == "tag" %}{% assign author = site.data.authors[page.title] %}{% if author.logo %}{% if author.logo contains "://" %}{{ author.logo }}{% else %}{{ author.logo | absolute_url }}{% endif %}{% else %}{{ site.og_img | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.og_img | prepend: site.baseurl | prepend: site.url }}{% endif %}" />
+        <meta property="og:image" content="{% if page.image %}{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | prepend: site.baseurl | prepend: site.url }}{% endif %}{% elsif page.type == "tag" %}{% assign author = site.data.authors[page.title] %}{% if author.logo %}{% if author.logo contains "://" %}{{ author.logo }}{% else %}{{ author.logo | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.og_img | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.og_img | prepend: site.baseurl | prepend: site.url }}{% endif %}" />
         <meta property="og:image:width" content="630" />
         <meta property="og:image:height" content="630" />
         <meta property="og:description" content="{% if page.description %}{{ page.description }}{% elsif page.type == "year" %}BangPyper's archive of posts during {{ page.type }} {{ page.date | date: "%Y"}}{% elsif page.type == "month" %}BangPyper's archive of posts in the {{ page.type }} of {{ page.date | date: "%B %Y"}}{% elsif page.type == "day" %}BangPypers's archive of posts on {{ page.type }} of {{ page.date | date: "%d %B %Y"}}{% elsif page.type == "category" %}BangPyper's archive of posts under {{ page.type }}: {{ page.title }}{% elsif page.type == "tag" %}BangPyper's arvhive of posts authored by {% assign author = site.data.authors[page.title] %}{{ author.display_name }}{% else %}{{ site.description }}{% endif %}">
@@ -38,7 +38,7 @@
         <meta name="twitter:title" content="{% if page.type == "year" %}{{ page.date | date: "%Y"}}{% elsif page.type == "month" %}{{ page.date | date: "%B %Y"}}{% elsif page.type == "day" %}{{ page.date | date: "%d %B %Y"}}{% elsif page.type == "tag" %}{% assign author = site.data.authors[page.title] %}{{ author.display_name }}{% else %}{{ page.title }}{% endif %} | {{site.name}}">
         <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% elsif page.type == "year" %}BangPyper's archive of posts during {{ page.type }} {{ page.date | date: "%Y"}}{% elsif page.type == "month" %}BangPyper's archive of posts in the {{ page.type }} of {{ page.date | date: "%B %Y"}}{% elsif page.type == "day" %}BangPypers's archive of posts on {{ page.type }} of {{ page.date | date: "%d %B %Y"}}{% elsif page.type == "category" %}BangPyper's archive of posts under {{ page.type }}: {{ page.title }}{% elsif page.type == "tag" %}BangPyper's arvhive of posts authored by {% assign author = site.data.authors[page.title] %}{{ author.display_name }}{% else %}{{ site.description }}{% endif %}">
         <meta name="twitter:domain" content="{{ site.url }}">
-        <meta name="twitter:image:src" content="{% if page.image %}{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | prepend: site.baseurl | prepend: site.url }}{% endif %}{% elsif page.type == "tag" %}{% assign author = site.data.authors[page.title] %}{% if author.logo %}{% if author.logo contains "://" %}{{ author.logo }}{% else %}{{ author.logo | absolute_url }}{% endif %}{% else %}{{ site.og_img | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.og_img | prepend: site.baseurl | prepend: site.url }}{% endif %}">
+        <meta name="twitter:image:src" content="{% if page.image %}{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | prepend: site.baseurl | prepend: site.url }}{% endif %}{% elsif page.type == "tag" %}{% assign author = site.data.authors[page.title] %}{% if author.logo %}{% if author.logo contains "://" %}{{ author.logo }}{% else %}{{ author.logo | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.og_img | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.og_img | prepend: site.baseurl | prepend: site.url }}{% endif %}">
         
         <meta name="keywords" content="BangPypers, Python, Bangalore Python, Python Bangalore, Python User Group"/>
         <meta name="author" content="ZeoSpec" />
@@ -88,7 +88,7 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top mediumnavigation nav-down">
                 
                 <div class="container pr-0">    
-                    
+                     
                     <!-- Begin Logo -->
                     <a class="navbar-brand" href="{{ site.baseurl }}/">
                         <img src="{{ site.logo | prepend: site.baseurl | prepend: site.url }}" alt="{{ site.name }}">
@@ -119,7 +119,7 @@
                                     {% else %}
                                     <li class="nav-item">
                                         {% endif %}
-                                        <a class="nav-link" href="/about/">About</a>
+                                        <a class="nav-link" href="{{ site.baseurl }}/about/">About</a>
                                     </li>
                                     
                                     {% if page.url == "/library/" %}
@@ -127,7 +127,7 @@
                                     {% else %}
                                     <li class="nav-item">
                                         {% endif %}
-                                        <a class="nav-link" href="/library/">Library</a>
+                                        <a class="nav-link" href="{{ site.baseurl }}/library/">Library</a>
                                     </li>
 
                                     <li class="nav-item">
@@ -192,11 +192,11 @@
                                                         </li>
                                                         
                                                         <li class="nav-item"style="display:inline; margin: 2em;">
-                                                            <a  href="/about/">About</a>
+                                                            <a  href="{{ site.baseurl }}/about/">About</a>
                                                         </li>
 
                                                         <li class="nav-item"style="display:inline; margin: 2em;">
-                                                            <a href="/library/">Library</a>
+                                                            <a href="{{ site.baseurl }}/library/">Library</a>
                                                         </li>
                                                         
                                                         <li class="nav-item"style="display:inline; margin: 2em;">
