Default post image & about page
Changes:

1. Default Post image will be displayed if post image is not specified

2. Changed `All Listings` to `All Posts`

3. Added contents of abou page

4. Deleted test author from `authors.yml`

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@ post_class: post-template
                 </div>
                 
                 <!-- Post Featured Image -->
-                {% if page.image %}<img class="featured-image img-fluid" src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | prepend: site.baseurl | prepend: site.url }}{% endif %}" alt="{{ post.title }}">{% endif %}
+                <img class="featured-image img-fluid" src="{% if page.image %}{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.post_default_img | prepend: site.baseurl | prepend: site.url }}{% endif %}" alt="{{ post.title }}">
                 <!-- {% if page.image %}<img class="featured-image img-fluid" src="{{ site.baseurl }}/{{ page.image }}" alt="{{ page.title }}">{% endif %} -->
                 <!-- End Featured Image -->
                 
