--- a/_includes/featuredbox.html
+++ b/_includes/featuredbox.html
@@ -7,7 +7,7 @@
                 <div class="h-100">
                     <div class="wrapthumbnail">
                         <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">
-                            <span class="thumbnail d-block" style="background-image:url({% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | prepend: site.baseurl | prepend: site.url }}{% endif %});">
+                            <span class="thumbnail d-block" style="background-image:url({% if post.image %}{% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.post_default_img | prepend: site.baseurl | prepend: site.url }}{% endif %});">
                             </span>
                         </a>
                     </div>
