--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -5,7 +5,7 @@
     <div class="card h-100">
         <div class="maxthumb">
             <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">
-                {% if post.image %} <img class="img-fluid" src="{% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | prepend: site.baseurl | prepend: site.url }}{% endif %}" alt="{{ post.title }}"> {% endif %}
+                <img class="img-fluid" src="{% if post.image %}{% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.post_default_img | prepend: site.baseurl | prepend: site.url }}{% endif %}" alt="{{ post.title }}">
             </a>
         </div>
         <div class="card-body">
