--- a/_includes/featuredbox.html
+++ b/_includes/featuredbox.html
@@ -7,8 +7,11 @@
                 <div class="h-100">
                     <div class="wrapthumbnail">
                         <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">
-                            <span class="thumbnail d-block" style="background-image:url({% if post.image %}{% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.post_default_img | prepend: site.baseurl | prepend: site.url }}{% endif %});">
-                            </span>
+                            {% if site.lazyimages == "enabled" %}
+                            <img class="featured-box-img-cover lazyimg"  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII=" data-src="{% if post.image %}{% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.post_default_img | prepend: site.baseurl | prepend: site.url }}{% endif %}">
+                            {% else %}
+                            <img class="featured-box-img-cover" src="{% if post.image %}{% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.post_default_img | prepend: site.baseurl | prepend: site.url }}{% endif %}">
+                            {% endif %}
                         </a>
                     </div>
                 </div>
@@ -24,12 +27,12 @@
                             <div class="wrapfooter">
                                 {% if post.author %}
                                 <span class="meta-footer-thumb">
-                                <a href="{{ site.baseurl }}/authors/{{ page.author }}/"><img class="author-thumb" src="{% if author.logo %}{% if author.logo contains "://" %}{{ author.logo }}{% else %}{{ author.logo | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.og_img | prepend: site.baseurl | prepend: site.url }}{% endif %}" alt="{{ author.display_name }}"></a>
+                                    <a href="{{ site.baseurl }}/authors/{{ page.author }}/"><img class="author-thumb" src="{% if author.logo %}{% if author.logo contains "://" %}{{ author.logo }}{% else %}{{ author.logo | prepend: site.baseurl | prepend: site.url }}{% endif %}{% else %}{{ site.og_img | prepend: site.baseurl | prepend: site.url }}{% endif %}" alt="{{ author.display_name }}"></a>
                                 </span>
                                 <span class="author-meta">
-                                <span class="post-name"><a href="{{ site.baseurl }}/authors/{{ post.author }}/">{{ author.display_name }}</a></span><br/>
-                                {% endif %}
-                                <span class="post-date">{{ post.date | date_to_string }}</span>
+                                    <span class="post-name"><a href="{{ site.baseurl }}/authors/{{ post.author }}/">{{ author.display_name }}</a></span><br/>
+                                    {% endif %}
+                                    <span class="post-date">{{ post.date | date_to_string }}</span>
                                 </span>
                                 <span class="post-read-more"><a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
                                 <div class="clearfix"></div>
