Fixed Slack URL

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -177,7 +177,7 @@
 
                     <li class="nav-item">
                         <a target="_blank" rel="noopener noreferrer" class="nav-link"
-                            href="http://bangpypers.heroku.com/"><i class="fab fa-slack"></i></a>
+                            href="http://bangpypers.slack.com/"><i class="fab fa-slack"></i></a>
                     </li>
 
                     {% include search-lunr.html %}
@@ -258,7 +258,7 @@
     
                         <li class="nav-item" style="display:inline; margin: 2em;">
                             <a target="_blank" rel="noopener noreferrer" 
-                                href="http://bangpypers.heroku.com/"><i class="fab fa-slack"></i></a>
+                                href="http://bangpypers.slack.com/"><i class="fab fa-slack"></i></a>
                         </li>
     
                     </ul>
